--- a/position1.html
+++ b/position1.html
@@ -6,6 +6,14 @@
     <title>Static Position Example</title>
 </head>
 <body>
+    <style>
+        .box {
+            width: 100px;
+            height: 50px;
+            background-color: greenyellow;
+            border: 2px solid black;
+        }
+    </style>
  
 </body>
 </html>
