--- a/position1.html
+++ b/position1.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static Position Example</title>
-</head>
-<body>
+
     <style>
         .box {
             width: 100px;
@@ -14,6 +13,8 @@
             border: 2px solid black;
         }
     </style>
- 
+</head>
+<body>
+    <div class="box">Static position</div>
 </body>
 </html>
