--- a/position2.html
+++ b/position2.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relative Position Example</title>
+    <style>
+        .box {
+            width: 100px;
+            height: 50px;
+            background-color: greenyellow;
+            border: 2px solid black;
+            position: relative;
+            top: 30px;
+            left: 50px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="box">relative position</div>
 </body>
 </html>
