--- a/position5.html
+++ b/position5.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sticky Position Example</title>
-    
+    <style>
+        .box {
+            width: 100px;
+            height: 50px;
+            background-color: lightpink;
+            position: sticky;
+            top: 0;
+            background-color: greenyellow;
+        }
+    </style>
+
 </head>
 <body>
     
