--- a/position5.html
+++ b/position5.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
-    
+    <div class="box">I am positioned sticky</div>
+    <div style="height: 1500px;">Scroll down the page!</div>
 </body>
 </html>
